@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.8, 3.9, "3.10", "3.11"]
         r-version: ['release']
         os: [ubuntu-latest, ubuntu-20.04, macOS-latest]
         experimental: [false]
@@ -19,12 +19,10 @@ jobs:
           - os: windows-latest
             experimental: true
             r-version: 'release'
-            python-version: 3.7
+            python-version: 3.8
             venv_activate: ""
             ld_libpath: ""
         exclude:
-          - os: windows-latest
-            python-version: 3.8
           - os: macOS-latest
             r-version: 'release'
     steps:
